<?xml version="1.0"?>
<package>
  <name>recastnavigation</name>
  <version>0.0.0</version>
  <description>Recastnavigation is a library used for planning paths on a navigation mesh</description>

  <maintainer email="hansg91@gmail.com">Mikko Mononen</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <license>ZLib</license>
</package>
